force-app/main/default/objects/Payment_Transaction__c/fields/Amount_Charged__c.field-meta.xml
<CustomField>
    <fullName>Amount_Charged__c</fullName>
    <label>Amount Charged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>