force-app/main/default/objects/Payment_Transaction__c/fields/Amount_Original__c.field-meta.xml
<CustomField>
    <fullName>Amount_Original__c</fullName>
    <label>Amount Original</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>