force-app/main/default/objects/Payment_Transaction__c/fields/Amount_Surcharge__c.field-meta.xml
<CustomField>
    <fullName>Amount_Surcharge__c</fullName>
    <label>Amount Surcharge</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>