force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Direct Deposit</fullName>
            </value>
            <value>
                <fullName>Mail Cheque</fullName>
            </value>
            <value>
                <fullName>Money Order(AUD)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>